// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`py#rdb mcp-server-connection generator > should add rdb serve-local dependency to mcp-server serve-local 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-mcp-server",
  "root": "packages/my-mcp-server",
  "targets": {
    "mcp-server-serve-local": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "serve-local",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`py#rdb mcp-server-connection generator > should use sourceComponent name when provided 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-mcp-server",
  "root": "packages/my-mcp-server",
  "targets": {
    "custom-mcp-server-serve-local": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "serve-local",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;
